# Build_Systems

task1/: CMakeLists.txt
task1/A/: CMakeLists.txt  index.h  preparing.py
task1/B/: .lib.cpp.swp  CMakeLists.txt  lib.cpp  lib.h
task1/C/: main.cpp  main.h
task3/TechProgSimpleLibrary/: CMakeLists.txt
task4/: CMakeLists.txt  TransformImage  array.h  array.txt  generate.py  main.cpp  with_python.py
